@@ -18,6 +18,7 @@ Bugs fixed:
 - 1818578 Fixed sfcb local leaks memory during associator calls
 - 1816606 Fixed sfcb problem with propertylist in modifyInstance
 - 1823565 Fixed sfcb alignment problem during clone
+- 1826149 Fixed sfcb bad spelling in brokerOs.c
 
 Changes in 1.2.4
 ================
